--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "graphql"
   ],
   "dependencies": {
+    "@alan-ai/alan-sdk-web": "^1.1.8",
     "@apollo/react-common": "3.1.3",
     "@apollo/react-hooks": "3.1.3",
     "@apollo/react-ssr": "3.1.3",
@@ -48,19 +49,21 @@
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-session": "1.17.0",
-    "firebase": "7.12.0",
+    "firebase": "^7.15.5",
     "graphql": "14.6.0",
     "graphql-tag": "2.10.3",
     "graphql-tools": "4.0.7",
     "isomorphic-unfetch": "3.0.0",
     "lru-cache": "5.1.1",
-    "next": "9.3.1",
+    "next": "^9.4.4",
+    "node-gyp": "^7.0.0",
     "passport": "0.4.1",
     "passport-local": "1.0.0",
     "react": "16.13.1",
     "react-apollo": "3.1.3",
     "react-dom": "16.13.1",
     "react-render-html": "0.6.0",
+    "rebuild": "^0.1.2",
     "url": "0.11.0"
   },
   "devDependencies": {
@@ -89,13 +92,15 @@
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2",
     "enzyme-to-json": "3.4.4",
-    "eslint": "6.8.0",
+    "eslint": "^7.3.1",
     "eslint-config-airbnb-typescript": "7.2.0",
     "eslint-config-prettier": "6.10.1",
     "eslint-plugin-import": "2.20.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-prettier": "3.1.2",
     "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-react-hooks": "^4.0.5",
+    "google-auth-library": "^6.0.2",
     "jest": "25.2.2",
     "jest-enzyme": "7.1.2",
     "mockdate": "2.0.5",
@@ -107,6 +112,7 @@
     "rimraf": "3.0.2",
     "ts-jest": "25.2.1",
     "ts-node": "8.8.1",
+    "tslint": "^6.1.2",
     "tslint-config-prettier": "1.18.0",
     "typescript": "3.8.3"
   }
