--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@apollo/react-common": "3.1.3",
     "@apollo/react-hooks": "3.1.3",
     "@apollo/react-ssr": "3.1.3",
+    "@material-ui/core": "^4.11.0",
     "apollo-cache-inmemory": "1.6.5",
     "apollo-client": "2.6.8",
     "apollo-fetch": "0.7.0",
