--- a/package.json
+++ b/package.json
@@ -85,21 +85,21 @@
     "@types/passport": "1.0.3",
     "@types/passport-local": "1.0.33",
     "@types/react": "16.9.25",
-    "@typescript-eslint/eslint-plugin": "2.25.0",
+    "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/eslint-plugin-tslint": "2.25.0",
-    "@typescript-eslint/parser": "2.25.0",
+    "@typescript-eslint/parser": "^3.7.1",
     "babel-loader": "8.1.0",
     "babel-plugin-transform-define": "2.0.0",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2",
     "enzyme-to-json": "3.4.4",
-    "eslint": "^7.3.1",
+    "eslint": "^7.5.0",
     "eslint-config-airbnb-typescript": "7.2.0",
     "eslint-config-prettier": "6.10.1",
     "eslint-plugin-import": "2.20.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-prettier": "3.1.2",
-    "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-react": "^7.20.4",
     "eslint-plugin-react-hooks": "^4.0.5",
     "google-auth-library": "^6.0.2",
     "jest": "25.2.2",
